--- a/Unit1/Labs/Lab9 Control sentences and data types/Lab9_ControlSentences/nbproject/project.properties
+++ b/Unit1/Labs/Lab9 Control sentences and data types/Lab9_ControlSentences/nbproject/project.properties
@@ -54,7 +54,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=lab9_controlsentences.Lab9_ControlSentencesAndOperators
+main.class=lab9_controlsentences.Lab9_ControlSentences
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
