--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,6 @@
 /Unit3/Labs/lab25_FullExercise/nbproject/private/
 /Unit3/Labs/lab25_FullExercise/build/
+/Unit3/Labs/lab26_GUIplusPercistance/lab26_GUIpusPercistance/nbproject/private/
+/Unit3/Labs/lab26_GUIplusPercistance/lab26_GUIpusPercistance/build/
+/Unit3/Asignments/H17_table/nbproject/private/
+/Unit3/Asignments/H17_table/build/
